@@ -1,25 +1,29 @@
 package com.poupa.vinylmusicplayer.ui.activities.tageditor;
 
-import android.annotation.TargetApi;
 import android.app.Activity;
 import android.app.Dialog;
+import android.app.PendingIntent;
 import android.app.SearchManager;
+import android.content.ActivityNotFoundException;
+import android.content.ContentUris;
 import android.content.Context;
 import android.content.Intent;
 import android.graphics.Bitmap;
-import android.graphics.BitmapFactory;
 import android.media.MediaScannerConnection;
 import android.net.Uri;
 import android.os.Build;
+import android.os.Build.VERSION_CODES;
 import android.os.Bundle;
-import android.util.Log;
+import android.provider.MediaStore;
 import android.view.MenuItem;
 import android.view.View;
 import android.view.animation.OvershootInterpolator;
 import android.widget.ImageView;
 import android.widget.LinearLayout;
-import android.widget.Toast;
 
+import androidx.activity.result.ActivityResultLauncher;
+import androidx.activity.result.IntentSenderRequest;
+import androidx.activity.result.contract.ActivityResultContracts;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.widget.Toolbar;
@@ -37,26 +41,27 @@ import com.poupa.vinylmusicplayer.discog.tagging.MultiValuesTagUtil;
 import com.poupa.vinylmusicplayer.misc.DialogAsyncTask;
 import com.poupa.vinylmusicplayer.misc.SimpleObservableScrollViewCallbacks;
 import com.poupa.vinylmusicplayer.misc.UpdateToastMediaScannerCompletionListener;
+import com.poupa.vinylmusicplayer.model.Song;
 import com.poupa.vinylmusicplayer.ui.activities.base.AbsBaseActivity;
 import com.poupa.vinylmusicplayer.ui.activities.saf.SAFGuideActivity;
-import com.poupa.vinylmusicplayer.util.MusicUtil;
+import com.poupa.vinylmusicplayer.util.AutoCloseAudioFile;
+import com.poupa.vinylmusicplayer.util.AutoDeleteTempFile;
+import com.poupa.vinylmusicplayer.util.OopsHandler;
 import com.poupa.vinylmusicplayer.util.SAFUtil;
+import com.poupa.vinylmusicplayer.util.SafeToast;
 import com.poupa.vinylmusicplayer.util.Util;
 
 import org.jaudiotagger.audio.AudioFile;
-import org.jaudiotagger.audio.AudioFileIO;
 import org.jaudiotagger.tag.FieldKey;
 import org.jaudiotagger.tag.Tag;
 import org.jaudiotagger.tag.images.Artwork;
 import org.jaudiotagger.tag.images.ArtworkFactory;
 
-import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -67,8 +72,6 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
 
     public static final String EXTRA_ID = "extra_id";
     public static final String EXTRA_PALETTE = "extra_palette";
-    private static final String TAG = AbsTagEditorActivity.class.getSimpleName();
-    private static final int REQUEST_CODE_SELECT_IMAGE = 1000;
 
     FloatingActionButton fab;
     ObservableScrollView observableScrollView;
@@ -77,12 +80,12 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     LinearLayout header;
 
     private long id;
-    private int headerVariableSpace;
-    private int paletteColorPrimary;
-    private boolean isInNoImageMode;
+    int headerVariableSpace;
+    int paletteColorPrimary;
+    boolean isInNoImageMode;
     private final SimpleObservableScrollViewCallbacks observableScrollViewCallbacks = new SimpleObservableScrollViewCallbacks() {
         @Override
-        public void onScrollChanged(int scrollY, boolean b, boolean b2) {
+        public void onScrollChanged(int scrollY, boolean firstScroll, boolean dragging) {
             float alpha;
             if (!isInNoImageMode) {
                 alpha = 1 - (float) Math.max(0, headerVariableSpace - scrollY) / headerVariableSpace;
@@ -94,37 +97,115 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
             image.setTranslationY(scrollY / 2.0f);
         }
     };
-    private List<String> songPaths;
-
-    private List<String> savedSongPaths;
-    private String currentSongPath;
+    private List<Song> songs;
+    private List<Song> savedSongs;
+    private Song currentSong;
     private Map<FieldKey, String> savedTags;
     private ArtworkInfo savedArtworkInfo;
+
+    private ActivityResultLauncher<String> writeTagsApi19_SAFFilePicker;
+    private ActivityResultLauncher<Intent> writeTagsApi21_SAFGuide;
+
+    private ActivityResultLauncher<Uri> writeTagsApi21_SAFTreePicker;
+    private ActivityResultLauncher<String> imagePicker;
+
+    private ActivityResultLauncher<IntentSenderRequest> tagEditRequestApi30;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
+
         setContentView(getViewBinding().getRoot());
 
         getIntentExtras();
 
-        songPaths = getSongPaths();
-        if (songPaths.isEmpty()) {
+        songs = getSongs();
+        if (songs.isEmpty()) {
             finish();
             return;
         }
 
         headerVariableSpace = getResources().getDimensionPixelSize(R.dimen.tagEditorHeaderVariableSpace);
 
-        setUpViews();
-
         setSupportActionBar(toolbar);
         //noinspection ConstantConditions
         getSupportActionBar().setTitle(null);
         getSupportActionBar().setDisplayHomeAsUpEnabled(true);
+
+        writeTagsApi19_SAFFilePicker = registerForActivityResult(
+                new ActivityResultContracts.CreateDocument("audio/*") {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, @NonNull String input) {
+                        return super.createIntent(context, input)
+                                .addCategory(Intent.CATEGORY_OPENABLE)
+                                .putExtra("android.content.extra.SHOW_ADVANCED", true);
+                    }
+                },
+                resultUri -> writeTags(List.of(currentSong)));
+
+        writeTagsApi21_SAFGuide = registerForActivityResult(
+                new ActivityResultContracts.StartActivityForResult(),
+                result -> {
+                    if (result.getResultCode() == Activity.RESULT_OK)
+                    {
+                        writeTagsApi21_SAFTreePicker.launch(null);
+                    }
+                });
+
+        writeTagsApi21_SAFTreePicker = registerForActivityResult(
+                new ActivityResultContracts.OpenDocumentTree() {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, Uri input) {
+                        return super.createIntent(context, input)
+                                .putExtra("android.content.extra.SHOW_ADVANCED", true);
+                    }
+                },
+                resultUri -> {
+                    SAFUtil.saveTreeUri(this, resultUri);
+                    writeTags(savedSongs);
+                });
+
+        if (Build.VERSION.SDK_INT >= VERSION_CODES.R) {
+            tagEditRequestApi30 = registerForActivityResult(
+                    new ActivityResultContracts.StartIntentSenderForResult(),
+                    result -> {
+                        if (result.getResultCode() == Activity.RESULT_OK) {
+                            setUpViews();
+                        } else {
+                            showFab();
+                            SafeToast.show(this, getString(R.string.access_not_granted));
+                        }
+                    });
+        }
+
+        imagePicker = registerForActivityResult(
+                new ActivityResultContracts.GetContent() {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, @NonNull String input) {
+                        return super.createIntent(context, input)
+                                .setType("image/*");
+                    }
+                },
+                this::loadImageFromFile);
+
+        if (Build.VERSION.SDK_INT <= Build.VERSION_CODES.Q) {
+            setUpViews();
+        }
+        else {
+            List<Uri> urisToRead = new ArrayList<>();
+            for (Song song : songs) {
+                urisToRead.add(ContentUris.withAppendedId(MediaStore.Audio.Media.getContentUri("external"), song.id));
+            }
+            PendingIntent readPendingIntent = MediaStore.createWriteRequest(this.getContentResolver(), urisToRead);
+
+            tagEditRequestApi30.launch(new IntentSenderRequest.Builder(readPendingIntent).build());
+        }
     }
 
-    private void setUpViews() {
+    protected void setUpViews() {
         setUpScrollView();
         setUpFab();
         setUpImageView();
@@ -151,7 +232,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                             getImageFromLastFM();
                             break;
                         case 1:
-                            startImagePicker();
+                            imagePicker.launch(getResources().getString(R.string.pick_from_local_storage));
                             break;
                         case 2:
                             searchImageOnWeb();
@@ -161,12 +242,6 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                             break;
                     }
                 }).show());
-    }
-
-    private void startImagePicker() {
-        Intent intent = new Intent(Intent.ACTION_GET_CONTENT);
-        intent.setType("image/*");
-        startActivityForResult(Intent.createChooser(intent, getString(R.string.pick_from_local_storage)), REQUEST_CODE_SELECT_IMAGE);
     }
 
     protected abstract void loadCurrentImage();
@@ -195,12 +270,13 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         }
     }
 
-    protected abstract @NonNull ViewBinding getViewBinding();
+    @NonNull
+    protected abstract ViewBinding getViewBinding();
 
     @NonNull
-    protected abstract List<String> getSongPaths();
+    protected abstract List<Song> getSongs();
 
-    protected void searchWebFor(String... keys) {
+    void searchWebFor(@NonNull String... keys) {
         StringBuilder stringBuilder = new StringBuilder();
         for (String key : keys) {
             stringBuilder.append(key);
@@ -210,18 +286,17 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         intent.putExtra(SearchManager.QUERY, stringBuilder.toString());
         intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
 
-        // Start search intent if possible: https://stackoverflow.com/questions/36592450/unexpected-intent-with-action-web-search
-        if (Intent.ACTION_WEB_SEARCH.equals(intent.getAction()) && intent.getExtras() != null) {
-            String query = intent.getExtras().getString(SearchManager.QUERY, null);
-            Intent browserIntent = new Intent(Intent.ACTION_VIEW, Uri.parse("https://www.google.com/search?q="+Uri.encode(query)));
-            boolean browserExists = intent.resolveActivityInfo(getPackageManager(), 0) != null;
-            if (browserExists && query != null) {
-                startActivity(browserIntent);
-                return;
-            }
-        }
+        String query = intent.getExtras().getString(SearchManager.QUERY, null);
+        Intent browserIntent = new Intent(
+                Intent.ACTION_VIEW,
+                Uri.parse("https://www.google.com/search?q="+Uri.encode(query))
+        );
+        try {
+            startActivity(browserIntent);
+            return;
+        } catch (ActivityNotFoundException ignored) {}
 
-        Toast.makeText(this, R.string.error_no_app_for_intent, Toast.LENGTH_LONG).show();
+        SafeToast.show(this, R.string.error_no_app_for_intent);
     }
 
     @Override
@@ -234,7 +309,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         return super.onOptionsItemSelected(item);
     }
 
-    protected void setNoImageMode() {
+    void setNoImageMode() {
         isInNoImageMode = true;
         image.setVisibility(View.GONE);
         image.setEnabled(false);
@@ -245,7 +320,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         toolbar.setBackgroundColor(paletteColorPrimary);
     }
 
-    protected void dataChanged() {
+    void dataChanged() {
         showFab();
     }
 
@@ -269,7 +344,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         fab.setEnabled(false);
     }
 
-    protected void setImageBitmap(@Nullable final Bitmap bitmap, int bgColor) {
+    void setImageBitmap(@Nullable final Bitmap bitmap, int bgColor) {
         if (bitmap == null) {
             image.setImageResource(R.drawable.default_album_art);
         } else {
@@ -287,53 +362,55 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         setTaskDescriptionColor(paletteColorPrimary);
     }
 
-    protected void writeValuesToFiles(@NonNull final Map<FieldKey, String> fieldKeyValueMap, @Nullable final ArtworkInfo artworkInfo) {
+    void writeValuesToFiles(@NonNull final Map<FieldKey, String> fieldKeyValueMap, @Nullable final ArtworkInfo artworkInfo) {
         Util.hideSoftKeyboard(this);
 
         hideFab();
 
-        savedSongPaths = getSongPaths();
+        savedSongs = getSongs();
         savedTags = fieldKeyValueMap;
         savedArtworkInfo = artworkInfo;
 
-        if (!SAFUtil.isSAFRequired(savedSongPaths)) {
-            writeTags(savedSongPaths);
-        } else {
-            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP) {
-                if (SAFUtil.isSDCardAccessGranted(this)) {
-                    writeTags(savedSongPaths);
-                } else {
-                    startActivityForResult(new Intent(this, SAFGuideActivity.class), SAFGuideActivity.REQUEST_CODE_SAF_GUIDE);
-                }
+        if (Build.VERSION.SDK_INT < Build.VERSION_CODES.LOLLIPOP) {
+            if (!SAFUtil.isSAFRequired(savedSongs)) {
+                writeTags(savedSongs);
             } else {
-                writeTagsKitkat();
+                writeTagsApi19();
+            }
+        } else {
+            if (!SAFUtil.isSAFRequired(savedSongs)) {
+                writeTags(savedSongs);
+            } else if (SAFUtil.isSDCardAccessGranted(this)) {
+                writeTags(savedSongs);
+            } else {
+                writeTagsApi21_SAFGuide.launch(new Intent(this, SAFGuideActivity.class));
             }
         }
     }
 
-    private void writeTags(List<String> paths) {
-        new WriteTagsAsyncTask(this).execute(new WriteTagsAsyncTask.LoadingInfo(paths, savedTags, savedArtworkInfo));
+    private void writeTags(List<Song> songs) {
+        new AsyncTask(this).execute(new AsyncTask.LoadingInfo(songs, savedTags, savedArtworkInfo));
     }
 
-    @TargetApi(Build.VERSION_CODES.KITKAT)
-    private void writeTagsKitkat() {
-        if (savedSongPaths.size() < 1) return;
+    private void writeTagsApi19() {
+        if (savedSongs.size() < 1) return;
 
-        currentSongPath = savedSongPaths.remove(0);
+        currentSong = savedSongs.remove(0);
 
-        if (!SAFUtil.isSAFRequired(currentSongPath)) {
-            writeTags(Collections.singletonList(currentSongPath));
-            writeTagsKitkat();
+        if (!SAFUtil.isSAFRequired(currentSong.data)) {
+            writeTags(List.of(currentSong));
+            writeTagsApi19();
         } else {
-            Toast.makeText(this, String.format(getString(R.string.saf_pick_file), currentSongPath), Toast.LENGTH_LONG).show();
-            SAFUtil.openFilePicker(this);
+            final String message = getString(R.string.saf_pick_file, currentSong.data);
+            SafeToast.show(this, message);
+            writeTagsApi19_SAFFilePicker.launch(message);
         }
     }
 
-    private static class WriteTagsAsyncTask extends DialogAsyncTask<WriteTagsAsyncTask.LoadingInfo, Integer, String[]> {
+    private static class AsyncTask extends DialogAsyncTask<AsyncTask.LoadingInfo, Integer, String[]> {
         private final WeakReference<Activity> activity;
 
-        public WriteTagsAsyncTask(Activity activity) {
+        AsyncTask(Activity activity) {
             super(activity);
             this.activity = new WeakReference<>(activity);
         }
@@ -341,42 +418,28 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         @Override
         protected String[] doInBackground(LoadingInfo... params) {
             try {
-                LoadingInfo info = params[0];
+                final LoadingInfo info = params[0];
 
                 Artwork artwork = null;
-                File albumArtFile = null;
-                final String albumArtMimeType = "image/png";
                 if (info.artworkInfo != null && info.artworkInfo.artwork != null) {
-                    try {
-                        albumArtFile = MusicUtil.createAlbumArtFile().getCanonicalFile();
-                        info.artworkInfo.artwork.compress(Bitmap.CompressFormat.PNG, 0, new FileOutputStream(albumArtFile));
-                        artwork = ArtworkFactory.createArtworkFromFile(albumArtFile);
+                    try (AutoDeleteTempFile albumArtFile = AutoDeleteTempFile.create(null, "png")){
+                        info.artworkInfo.artwork.compress(Bitmap.CompressFormat.PNG, 0, new FileOutputStream(albumArtFile.get().getCanonicalFile()));
+                        artwork = ArtworkFactory.createArtworkFromFile(albumArtFile.get());
                     } catch (IOException e) {
-                        e.printStackTrace();
+                        OopsHandler.collectStackTrace(e);
                     }
                 }
 
                 int counter = 0;
-                boolean wroteArtwork = false;
-                boolean deletedArtwork = false;
-                for (String filePath : info.filePaths) {
-                    publishProgress(++counter, info.filePaths.size());
-                    try {
-                        Uri safUri = null;
-
-                        if (filePath.contains(SAFUtil.SEPARATOR)) {
-                            String[] fragments = filePath.split(SAFUtil.SEPARATOR);
-                            filePath = fragments[0];
-                            safUri = Uri.parse(fragments[1]);
-                        }
-
-                        AudioFile audioFile = AudioFileIO.read(new File(filePath));
-                        Tag tag = audioFile.getTagOrCreateAndSetDefault();
+                for (Song song : info.songs) {
+                    publishProgress(++counter, info.songs.size());
+                    try (AutoCloseAudioFile audioFile = SAFUtil.loadReadWriteableAudioFile(activity.get(), song)) {
+                        final Tag tag = audioFile.get().getTagOrCreateAndSetDefault();
 
                         if (info.fieldKeyValueMap != null) {
-                            for (Map.Entry<FieldKey, String> entry : info.fieldKeyValueMap.entrySet()) {
+                            for (final Map.Entry<FieldKey, String> entry : info.fieldKeyValueMap.entrySet()) {
                                 try {
-                                    if (entry.getValue().isEmpty()) {
+                                    if (entry.getValue().trim().isEmpty()) {
                                         tag.deleteField(entry.getKey());
                                     }
                                     else if (entry.getKey() == FieldKey.ARTIST || entry.getKey() == FieldKey.ALBUM_ARTIST) {
@@ -386,11 +449,15 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                                             tag.addField(entry.getKey(), value);
                                         }
                                     }
+                                    else if (entry.getKey() == FieldKey.GENRE) {
+                                        final List<String> values = MultiValuesTagUtil.tagEditorSplit(entry.getValue());
+                                        tag.setField(entry.getKey(), MultiValuesTagUtil.merge(values));
+                                    }
                                     else {
-                                        tag.setField(entry.getKey(), entry.getValue());
+                                        tag.setField(entry.getKey(), entry.getValue().trim());
                                     }
                                 } catch (Exception e) {
-                                    e.printStackTrace();
+                                    OopsHandler.collectStackTrace(e);
                                 }
                             }
                         }
@@ -398,49 +465,26 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                         if (info.artworkInfo != null) {
                             if (info.artworkInfo.artwork == null) {
                                 tag.deleteArtworkField();
-                                deletedArtwork = true;
                             } else if (artwork != null) {
                                 tag.deleteArtworkField();
                                 tag.setField(artwork);
-                                wroteArtwork = true;
                             }
                         }
 
-                        Activity activity = this.activity.get();
-
-                        SAFUtil.write(activity, audioFile, safUri);
+                        SAFUtil.write(activity.get(), audioFile, song);
                     } catch (@NonNull Exception | NoSuchMethodError | VerifyError e) {
-                        e.printStackTrace();
+                        OopsHandler.collectStackTrace(e);
                     }
                 }
 
-                Context context = getContext();
-                if (context != null) {
-                    if (wroteArtwork) {
-                        MusicUtil.insertAlbumArt(
-                                context,
-                                info.artworkInfo.albumId,
-                                albumArtFile.getPath(),
-                                albumArtMimeType);
-                    } else if (deletedArtwork) {
-                        MusicUtil.deleteAlbumArt(context, info.artworkInfo.albumId);
-                    }
-                }
-
-                Collection<String> paths = info.filePaths;
-
-                if (Build.VERSION.SDK_INT == Build.VERSION_CODES.KITKAT) { // remove SAF URI from paths
-                    paths = new ArrayList<>(info.filePaths.size());
-                    for (String path : info.filePaths) {
-                        if (path.contains(SAFUtil.SEPARATOR))
-                            path = path.split(SAFUtil.SEPARATOR)[0];
-                        paths.add(path);
-                    }
+                Collection<String> paths = new ArrayList<>();
+                for (Song song : info.songs) {
+                    paths.add(song.data);
                 }
 
                 return paths.toArray(new String[0]);
             } catch (Exception e) {
-                e.printStackTrace();
+                OopsHandler.collectStackTrace(e);
                 return null;
             }
         }
@@ -485,15 +529,15 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
             ((MaterialDialog) dialog).setProgress(values[0]);
         }
 
-        public static class LoadingInfo {
-            public final Collection<String> filePaths;
+        static class LoadingInfo {
+            final Collection<Song> songs;
             @Nullable
-            public final Map<FieldKey, String> fieldKeyValueMap;
+            final Map<FieldKey, String> fieldKeyValueMap;
             @Nullable
-            private final ArtworkInfo artworkInfo;
+            final ArtworkInfo artworkInfo;
 
-            private LoadingInfo(Collection<String> filePaths, @Nullable Map<FieldKey, String> fieldKeyValueMap, @Nullable ArtworkInfo artworkInfo) {
-                this.filePaths = filePaths;
+            LoadingInfo(Collection<Song> songs, @Nullable Map<FieldKey, String> fieldKeyValueMap, @Nullable ArtworkInfo artworkInfo) {
+                this.songs = songs;
                 this.fieldKeyValueMap = fieldKeyValueMap;
                 this.artworkInfo = artworkInfo;
             }
@@ -514,72 +558,40 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         return id;
     }
 
-    @Override
-    protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent intent) {
-        super.onActivityResult(requestCode, resultCode, intent);
-        if (intent == null) {return;}
-
-        switch (requestCode) {
-            case REQUEST_CODE_SELECT_IMAGE:
-                if (resultCode == RESULT_OK) {
-                    Uri selectedImage = intent.getData();
-                    loadImageFromFile(selectedImage);
-                }
-                break;
-
-            case SAFGuideActivity.REQUEST_CODE_SAF_GUIDE:
-                SAFUtil.openTreePicker(this);
-                break;
-
-            case SAFUtil.REQUEST_SAF_PICK_TREE:
-                if (resultCode == RESULT_OK) {
-                    SAFUtil.saveTreeUri(this, intent);
-                    writeTags(savedSongPaths);
-                }
-                break;
-
-            case SAFUtil.REQUEST_SAF_PICK_FILE:
-                if (resultCode == RESULT_OK) {
-                    writeTags(Collections.singletonList(currentSongPath + SAFUtil.SEPARATOR + intent.getDataString()));
-                }
-                break;
-        }
-    }
-
     protected abstract void loadImageFromFile(Uri selectedFile);
 
-    @NonNull
-    private AudioFile getAudioFile(@NonNull String path) {
+    @Nullable
+    AutoCloseAudioFile getAudioFile() {
+        return getAudioFile(songs.get(0));
+    }
+
+    @Nullable
+    private AutoCloseAudioFile getAudioFile(@NonNull Song song) {
+        return SAFUtil.loadReadOnlyAudioFile(this, song);
+    }
+
+    @Nullable
+    static String getSongTitle(@NonNull final AudioFile audio) {
         try {
-            return AudioFileIO.read(new File(path));
-        } catch (@NonNull Exception | NoSuchMethodError | VerifyError e) {
-            Log.e(TAG, "Could not read audio file " + path, e);
-            return new AudioFile();
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.TITLE);
+        } catch (Exception e) {
+            return null;
         }
     }
 
     @Nullable
-    protected String getSongTitle() {
+    static String getAlbumTitle(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.TITLE);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.ALBUM);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    protected String getAlbumTitle() {
+    static String getArtistName(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.ALBUM);
-        } catch (Exception ignored) {
-            return null;
-        }
-    }
-
-    @Nullable
-    protected String getArtistName() {
-        try {
-            List<String> tags = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getAll(FieldKey.ARTIST);
+            List<String> tags = audio.getTagOrCreateAndSetDefault().getAll(FieldKey.ARTIST);
             return MultiValuesTagUtil.tagEditorMerge(tags);
         } catch (Exception ignored) {
             return null;
@@ -587,9 +599,9 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     }
 
     @Nullable
-    protected String getAlbumArtistName() {
+    static String getAlbumArtistName(@NonNull final AudioFile audio) {
         try {
-            List<String> tags = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getAll(FieldKey.ALBUM_ARTIST);
+            List<String> tags = audio.getTagOrCreateAndSetDefault().getAll(FieldKey.ALBUM_ARTIST);
             return MultiValuesTagUtil.tagEditorMerge(tags);
         } catch (Exception ignored) {
             return null;
@@ -597,59 +609,47 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     }
 
     @Nullable
-    protected String getGenreName() {
+    static String getGenreName(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.GENRE);
+            String tag = audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.GENRE);
+            List<String> genres = MultiValuesTagUtil.split(tag);
+            return MultiValuesTagUtil.tagEditorMerge(genres);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    protected String getSongYear() {
+    static String getSongYear(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.YEAR);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.YEAR);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    protected String getDiscNumber() {
+    static String getDiscNumber(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.DISC_NO);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.DISC_NO);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    protected String getTrackNumber() {
+    static String getTrackNumber(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.TRACK);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.TRACK);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    protected String getLyrics() {
+    static String getLyrics(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.LYRICS);
-        } catch (Exception ignored) {
-            return null;
-        }
-    }
-
-    @Nullable
-    protected Bitmap getAlbumArt() {
-        try {
-            Artwork artworkTag = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirstArtwork();
-            if (artworkTag != null) {
-                byte[] artworkBinaryData = artworkTag.getBinaryData();
-                return BitmapFactory.decodeByteArray(artworkBinaryData, 0, artworkBinaryData.length);
-            }
-            return null;
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.LYRICS);
         } catch (Exception ignored) {
             return null;
         }
